fix z-index card

--- a/src/components/Card/MyPokemonCard/myPokemonCard.scss
+++ b/src/components/Card/MyPokemonCard/myPokemonCard.scss
@@ -6,10 +6,10 @@
 
     transition: .3s;
     &:hover{
-        z-index: 99999;
+        z-index: 888;
         transform: scale(1.1);
     }
-    
+
     .release-btn{
         padding: 2px 10px !important;
     }
