--- a/src/components/Card/PokemonCardDefault/pokemonCard.scss
+++ b/src/components/Card/PokemonCardDefault/pokemonCard.scss
@@ -6,7 +6,7 @@
     box-shadow: 0 1px 6px 0 grey;
     transition: .3s;
     &:hover{
-        z-index: 99999;
+        z-index: 888;
         transform: scale(1.1);
     }
     .card-owned{
